--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -18,10 +18,10 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" id="GfW-sH-Krv" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="43"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GfW-sH-Krv" id="Wqx-bc-pl2">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zV3-3g-19o">
@@ -40,8 +40,9 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="zV3-3g-19o" firstAttribute="leading" secondItem="Wqx-bc-pl2" secondAttribute="leading" constant="20" id="1k8-Ie-TqP"/>
-                                        <constraint firstItem="h6I-Wr-fGf" firstAttribute="leading" secondItem="zV3-3g-19o" secondAttribute="trailing" constant="8" id="DEm-tg-lce"/>
-                                        <constraint firstItem="h6I-Wr-fGf" firstAttribute="top" secondItem="Wqx-bc-pl2" secondAttribute="top" constant="11" id="Jq3-Ud-yqC"/>
+                                        <constraint firstItem="h6I-Wr-fGf" firstAttribute="leading" secondItem="zV3-3g-19o" secondAttribute="trailing" constant="8" id="8EV-D1-9p3"/>
+                                        <constraint firstItem="h6I-Wr-fGf" firstAttribute="bottom" secondItem="Wqx-bc-pl2" secondAttribute="bottomMargin" id="OeK-sc-9my"/>
+                                        <constraint firstItem="h6I-Wr-fGf" firstAttribute="top" secondItem="Wqx-bc-pl2" secondAttribute="topMargin" id="ec2-VY-JkZ"/>
                                         <constraint firstItem="zV3-3g-19o" firstAttribute="top" secondItem="Wqx-bc-pl2" secondAttribute="top" constant="5" id="rjf-du-OdO"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -63,7 +64,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ufo-Ya-R5b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="413" y="-32"/>
+            <point key="canvasLocation" x="411.59420289855075" y="-32.142857142857139"/>
         </scene>
         <!--User View Controller-->
         <scene sceneID="u8C-Tr-p1v">
@@ -117,7 +118,6 @@
                         <outlet property="emailLabel" destination="CPL-Iw-Nhd" id="JJh-cS-2rz"/>
                         <outlet property="nameLabel" destination="RzU-T8-6RG" id="1Ie-P6-lwn"/>
                         <outlet property="phoneLabel" destination="6lj-tk-aC2" id="j7S-VN-5XG"/>
-                        <outlet property="phoneNumber" destination="6lj-tk-aC2" id="jmk-kO-Okl"/>
                         <outlet property="userLargeImage" destination="vre-pC-Rwn" id="2Zh-xS-lUI"/>
                     </connections>
                 </viewController>
