--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="36I-du-vPd">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Ewl-mk-vq6" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contactCell" id="Ewl-mk-vq6" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="45"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ewl-mk-vq6" id="W1w-aY-lPa">
@@ -70,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="1050.4000000000001" y="13.043478260869566"/>
         </scene>
-        <!--View Controller-->
+        <!--Contact Detail View Controller-->
         <scene sceneID="b7b-8m-aI7">
             <objects>
-                <viewController id="WPi-qM-1PZ" sceneMemberID="viewController">
+                <viewController id="WPi-qM-1PZ" customClass="ContactDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RaP-ek-fg6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -115,10 +115,16 @@
                         <viewLayoutGuide key="safeArea" id="8HQ-aO-kla"/>
                     </view>
                     <navigationItem key="navigationItem" id="bWh-GG-abs"/>
+                    <connections>
+                        <outlet property="contactEmailLabel" destination="9nn-1g-8d1" id="sJa-um-0r6"/>
+                        <outlet property="contactImageView" destination="Lvz-c9-XX9" id="WEf-5k-fRG"/>
+                        <outlet property="contactNameLabel" destination="yWG-rs-75F" id="fTH-sx-fIB"/>
+                        <outlet property="contactPhoneNumberLabel" destination="pPi-K2-2wu" id="zP8-Ok-Z41"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fdf-qe-F1b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1863.2" y="6.746626686656672"/>
+            <point key="canvasLocation" x="2084" y="12"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yz0-FB-JCs">
